kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: stp-poc
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
      annotations:
        ad.datadoghq.com/web.checks: |
          {
            "openmetrics": {
              "init_config": {},
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:%%port%%/q/metrics",
                  "namespace": "bamoe-poc",
                  "metrics": [".*"]
                }
              ]
            }
          }  
    spec:
      containers:
      - name: web
        image: "katscratch.azurecr.io/bamoe/stp-poc:1.0.0-SNAPSHOT"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web-port
