kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stp-poc
  namespace: stp-poc
spec:
  selector:
    component: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: web-port
